# morse

./: Cargo.toml  flake.nix  rust-toolchain.toml
common/: Cargo.toml
common/src/: lib.rs
esp32c3-morse/: Cargo.toml
esp32c3-morse/.cargo/: config.toml
esp32c3-morse/src/: main.rs
pico/: Cargo.toml
pico/.cargo/: config.toml
pico/src/: main.rs
