[package]
name = "esp32c3-morse"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { version = "0.1.0", path = "../common" }
embassy-executor = { version = "0.5.0", features = ["arch-riscv32", "nightly"] }
embassy-sync = "0.5.0"
esp32c3-hal = { version = "0.15.0", features = ["async", "embassy-executor-thread", "embassy-time-timg0"] }
panic-halt = "0.2.0"
