[package]
name = "esp32c3-morse"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { version = "0.1.0", path = "../common" }
embassy-executor = { version = "0.5.0", features = ["arch-riscv32", "nightly"] }
embassy-sync = "0.5.0"
esp-backtrace = { version = "0.10.0", features = ["esp32c3", "panic-handler", "print-jtag-serial", "defmt-espflash"] }
esp32c3-hal = { version = "0.15.0", features = ["async", "embassy-executor-thread", "embassy-time-timg0"] }
