[package]
name = "pico"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { version = "0.1.0", path = "../common" }
cortex-m-rt = "0.7.3"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "nightly", "executor-thread", "integrated-timers"] }
embassy-futures = "0.1.1"
embassy-rp = { version = "0.1.0", features = ["critical-section-impl", "time-driver"], default-features = false }
embassy-sync = "0.5.0"
panic-halt = "0.2.0"
