[package]
name = "pico"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { version = "0.1.0", path = "../common" }
cortex-m-rt = "0.7.3"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "nightly", "executor-thread", "integrated-timers"] }
embassy-rp = { version = "0.1.0", features = ["critical-section-impl", "time-driver"] }
embassy-sync = "0.5.0"
panic-halt = "0.2.0"
portable-atomic = { version = "1.6.0", default-features = false, features = ["critical-section"] }
static_cell = { version = "2.0.0", features = ["nightly"] }
